# rank-refine

./: .cargo-deny.toml  .gitignore  CHANGELOG.md  Cargo 2.toml  Cargo.toml  DESIGN.md  INTEGRATION.md  LICENSE-APACHE  MISSING_FEATURES.md  OUTREACH.md  PUBLISHING.md  README.md  REFERENCE.md  mutants.toml
.cursor/rules/: refine-specific.mdc
.github/: REPO_METADATA.md
.github/workflows/: ci.yml  e2e-published.yml  publish-wasm.yml  publish.yml
archive/2025-01/: ANALYSIS.md  CHANGES_SUMMARY.md  COMPREHENSIVE_REVIEW.md  CRITIQUE.md  DOCUMENTATION_REVIEW_COMPLETE.md  EXPLANATION_ANALYSIS.md  IMPROVEMENTS_SUMMARY.md  PRE_PUBLISH_CHECK.md  README.md  VALIDATION_REPORT.md
benches/: refine.rs
docs/: IMPLEMENTATION_PLANS.md  REFERENCE.md  SECURITY.md  VERSION_MANAGEMENT.md  main.typ
evals/: Cargo.toml
examples/: alignment.rs  batch_alignment.rs  colbert_pooling.rs  diversity_selection.rs  mask_token_weighting.rs  matryoshka_search.rs  multimodal_alignment.rs  rag_rerank.rs  rerank.rs  search_diversity.rs  webassembly.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_maxsim.rs  fuzz_normalize.rs  fuzz_pool.rs  fuzz_simd.rs
hack/viz/: MAXSIM_VISUALIZATIONS.md  generate_maxsim_real_data.py  generate_maxsim_viz.py
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/diff/: src__colbert.rs_line_106_col_5.diff  src__colbert.rs_line_106_col_5_001.diff  src__colbert.rs_line_106_col_5_002.diff  src__colbert.rs_line_106_col_5_003.diff  src__colbert.rs_line_106_col_5_004.diff  src__colbert.rs_line_109_col_26.diff  src__colbert.rs_line_109_col_26_001.diff  src__colbert.rs_line_109_col_26_002.diff  src__colbert.rs_line_115_col_25.diff  src__colbert.rs_line_115_col_25_001.diff  src__colbert.rs_line_117_col_24.diff  src__colbert.rs_line_117_col_24_001.diff  src__colbert.rs_line_117_col_24_002.diff  src__colbert.rs_line_146_col_5.diff  src__colbert.rs_line_146_col_5_001.diff  src__colbert.rs_line_146_col_5_002.diff  src__colbert.rs_line_146_col_5_003.diff  src__colbert.rs_line_146_col_5_004.diff  src__colbert.rs_line_155_col_21.diff  src__colbert.rs_line_155_col_21_001.diff  src__colbert.rs_line_158_col_46.diff  src__colbert.rs_line_161_col_39.diff  src__colbert.rs_line_161_col_39_001.diff  src__colbert.rs_line_173_col_61.diff  src__colbert.rs_line_173_col_61_001.diff  src__colbert.rs_line_182_col_21.diff  src__colbert.rs_line_195_col_5.diff  src__colbert.rs_line_195_col_5_001.diff  src__colbert.rs_line_195_col_5_002.diff  src__colbert.rs_line_200_col_25.diff  src__colbert.rs_line_200_col_9.diff  src__colbert.rs_line_200_col_9_001.diff  src__colbert.rs_line_208_col_40.diff  src__colbert.rs_line_208_col_40_001.diff  src__colbert.rs_line_212_col_21.diff  src__colbert.rs_line_215_col_29.diff  src__colbert.rs_line_215_col_29_001.diff  src__colbert.rs_line_229_col_24.diff  src__colbert.rs_line_229_col_24_001.diff  src__colbert.rs_line_244_col_26.diff  (+233 more)
rank-refine/: Cargo.toml  DECISION_GUIDES.md  ERROR_HANDLING.md  GETTING_STARTED.md  README.md
rank-refine-python/: Cargo.toml  README.md  pyproject.toml  rank_refine.pyi
rank-refine-python/rank_refine/: __init__.py
rank-refine-python/src/: lib.rs
rank-refine-python/tests/: __init__.py  test_refine.py
rank-refine/benches/: comprehensive.rs  refine.rs
rank-refine/examples/: batch_maxsim.rs  colbert_pooling.rs  cross_encoder_rerank.rs  evaluate_reranking.rs  fusion_to_refine.rs  mask_token_weighting.rs  matryoshka_search.rs  python_integration.rs  refine_to_fusion_pipeline.rs  rerank.rs  webassembly.rs
rank-refine/proptest-regressions/: colbert.txt  simd.txt
rank-refine/src/: colbert.rs  crossencoder.rs  diversity.rs  embedding.rs  explain.rs  lib.rs  matryoshka.rs  scoring.rs  simd.rs  wasm.rs
rank-refine/src/crossencoder/: ort.rs
rank-refine/tests/: edge_cases.rs  evaluation.rs  integration.rs
src/: colbert.rs  crossencoder.rs  crossencoder_ort.rs  diversity.rs  embedding.rs  explain.rs  lib.rs  matryoshka.rs  scoring.rs  simd.rs
test-e2e-local/: Cargo.toml
tests/: integration.rs
viz/: generate_maxsim_viz.py
