[package]
name = "rank-refine"
version = "0.7.36"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "SIMD-accelerated MaxSim, cosine, diversity (MMR/DPP) for vector search and RAG pipelines"
keywords = ["vector-search", "similarity", "colbert", "rag", "simd"]
categories = ["algorithms", "science", "mathematics"]
repository = "https://github.com/arclabs561/rank-refine"
readme = "README.md"
authors = ["Arc <attobop@gmail.com>"]

[dependencies]
kodama = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[features]
default = []
hierarchical = ["kodama"]

[[bench]]
name = "refine"
harness = false
