[workspace]
members = ["rank-refine", "rank-refine-python", "fuzz"]
resolver = "2"
default-members = ["rank-refine"]

[workspace.package]
version = "0.7.36"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]

[workspace.dependencies]
kodama = "0.3"
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py37"] }
criterion = "0.5"
proptest = "1"
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
