[package]
name = "rank-refine-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.rank-refine]
path = ".."

[[bin]]
name = "fuzz_simd"
path = "fuzz_targets/fuzz_simd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_maxsim"
path = "fuzz_targets/fuzz_maxsim.rs"
test = false
doc = false
bench = false
