[package]
name = "rank-refine-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { workspace = true }
arbitrary = { workspace = true }

[dependencies.rank-refine]
path = "../rank-refine"

[[bin]]
name = "fuzz_simd"
path = "fuzz_targets/fuzz_simd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_maxsim"
path = "fuzz_targets/fuzz_maxsim.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pool"
path = "fuzz_targets/fuzz_pool.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_normalize"
path = "fuzz_targets/fuzz_normalize.rs"
test = false
doc = false
bench = false
