[package]
name = "rank-refine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "SIMD-accelerated MaxSim (ColBERT/ColPali), cosine similarity, diversity (MMR/DPP), token alignment/highlighting for vector search and RAG. Supports text and multimodal late interaction."
keywords = ["vector-search", "similarity", "colbert", "colpali", "rag", "simd", "multimodal", "late-interaction", "maxsim", "token-alignment"]
categories = ["algorithms", "science", "mathematics"]
repository = "https://github.com/arclabs561/rank-refine"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kodama = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
# ort = { version = "2.0.0-rc.10", optional = true }  # TODO: Enable when stable

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
hierarchical = ["kodama"]
serde = ["dep:serde"]
# ort = ["dep:ort"]  # TODO: Enable when ort 2.0 is stable

[[bench]]
name = "refine"
harness = false

